# llm-chat-api

./: README.md  pyproject.toml
app/: main.py
app/core/: model.py
