[project]
name = "ollama-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "jangil",email = "jangil.oh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
